--- a/res.qrc
+++ b/res.qrc
@@ -10,6 +10,15 @@
         <file>ressources/trash_icon.png</file>
         <file>ressources/add_icon.png</file>
         <file>ressources/eye_icon.png</file>
+        <file>ressources/dilate_icon.png</file>
+        <file>ressources/erode_icon.png</file>
+        <file>ressources/light_icon.png</file>
+        <file>ressources/resize_icon.png</file>
+        <file>ressources/blur_icon.png</file>
+        <file>ressources/canny_icon.png</file>
+        <file>ressources/face_icon.png</file>
+        <file>ressources/panorama_icon.png</file>
+        <file>ressources/sobel_icon.png</file>
     </qresource>
     <qresource prefix="/faceDetection">
         <file>ressources/faceDetection/recognizer/trained_recognizer.yml</file>
