--- a/Widgets/Popups/LightenPopup/lightenpopup.ui
+++ b/Widgets/Popups/LightenPopup/lightenpopup.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Modify Brightness</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../../res.qrc">
